--- a/packages/communication-react/package.json
+++ b/packages/communication-react/package.json
@@ -89,6 +89,7 @@
     "@internal/calling-stateful-client": "1.3.1-beta.1",
     "@internal/chat-component-bindings": "1.3.1-beta.1",
     "@internal/chat-stateful-client": "1.3.1-beta.1",
+    "@internal/fake-backends": "1.3.1-beta.1",
     "@internal/react-components": "1.3.1-beta.1",
     "@internal/react-composites": "1.3.1-beta.1",
     "@microsoft/api-documenter": "~7.12.11",
