--- a/packages/react-composites/package.json
+++ b/packages/react-composites/package.json
@@ -85,6 +85,7 @@
     "@babel/cli": "~7.16.0",
     "@babel/core": "~7.16.0",
     "@babel/preset-env": "7.13.10",
+    "@internal/fake-backends": "1.3.1-beta.1",
     "@mdx-js/react": "^1.6.22",
     "@microsoft/api-documenter": "~7.12.11",
     "@microsoft/api-extractor": "~7.18.0",
